# ellipsis-client

./: Cargo.toml  README.md
crates/: Cargo.toml
crates/ellipsis-client/: Cargo.toml
crates/ellipsis-client/src/: ellipsis_client.rs  grpc_client.rs  lib.rs
crates/transaction-utils/: Cargo.toml
crates/transaction-utils/src/: lib.rs
ellipsis-client/: Cargo.toml
ellipsis-client/src/: banks_client.rs  banks_client_interface.rs  banks_server.rs  ellipsis_client.rs  grpc_client.rs  lib.rs  program_test.rs
examples/grpc/: Cargo.toml
examples/grpc/src/: main.rs
src/: banks_client.rs  banks_client_interface.rs  banks_server.rs  ellipsis_client.rs  grpc_client.rs  lib.rs  transaction_utils.rs
transaction-utils/: Cargo.toml
transaction-utils/src/: lib.rs
