[package]
name = "ellipsis-client"
version = "0.1.10"
edition = "2021"
description = "Lightweight interface for interacting with the Solana blockchain"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
bs58 = "0.4.0"
thiserror = "1.0"
solana-program = "=1.14.9"
solana-logger = "=1.14.9"
solana-transaction-status = "=1.14.9"
solana-sdk = "=1.14.9"
solana-client = "=1.14.9"
solana-test-client = "0.1.0" 
async-trait = "0.1.52"
tokio = { version = "1.6", features = ["macros"] }
anyhow = "1.0.52"
bincode = "1.3.3"
