[workspace]
resolver = "2"
members = [
    "ellipsis-client",
    "transaction-utils",
    "examples/grpc"
]

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true


[workspace.dependencies]
itertools = "0.10.3"
bs58 = "0.4.0"
thiserror = "1.0"
solana-program = "1.14.9"
solana-logger = "1.14.9"
solana-transaction-status = "1.14.9"
solana-bpf-loader-program = "1.14.9"
solana-program-runtime = "1.14.9"
solana-runtime = "1.14.9"
solana-sdk = "1.14.9"
solana-send-transaction-service = "1.14.9"
solana-client = "1.14.9"
solana-vote-program = "1.14.9"
async-trait = "0.1.52"
tokio = { version = "1.6", features = ["macros"] }
anyhow = "1.0.52"
bincode = "1.3.3"
assert_matches = "1.5.0"
base64 = "0.13.0"
borsh = "0.9.3"
chrono-humanize = "0.2.1"
crossbeam-channel = "0.5"
log = "0.4.17"
serde = "1.0.144"
futures = "0.3.25"
lazy_static = "1.1.1"
tarpc = {version = "0.29.0", features = ["full"] }
tokio-serde = {version = "0.8", features = ["bincode"]}
yellowstone-grpc-client = "1.1.1+solana.1.16.1"
yellowstone-grpc-proto = "1.1.0+solana.1.16.1"
backoff = { version = "0.4.0", features = ["tokio"] }