[workspace]
resolver = "2"
members = ["ellipsis-client", "transaction-utils"]

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0.95"
assert_matches = "1.5.0"
async-trait = "0.1.85"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "0.10.4"
bs58 = "0.5.1"
chrono-humanize = "0.2.3"
crossbeam-channel = "0.5.14"
futures = "0.3.31"
itertools = "0.10.3"
lazy_static = "1.5.0"
log = "0.4.22"
serde = "1.0.217"
solana-banks-client = ">=1.14.12, <1.19.0"
solana-bpf-loader-program = ">=1.14.12, <1.19.0"
solana-client = ">=1.14.12, <1.19.0"
solana-logger = ">=1.14.12, <1.19.0"
solana-program = ">=1.14.12, <1.19.0"
solana-program-runtime = ">=1.14.12, <1.19.0"
solana-runtime = ">=1.14.12, <1.19.0"
solana-sdk = ">=1.14.12, <1.19.0"
solana-send-transaction-service = ">=1.14.12, <1.19.0"
solana-transaction-status = ">=1.14.12, <1.19.0"
solana-vote-program = ">=1.14.12, <1.19.0"
tarpc = { version = "0.29.0", features = ["full"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tracing = { version = "0.1.41", features = ["log"] }
yellowstone-grpc-client = "1.15.2"
yellowstone-grpc-proto = "1.14.2"
