[workspace]
resolver = "2"
members = ["ellipsis-client", "transaction-utils"]

[workspace.package]
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[workspace.dependencies]
anyhow = "1.0.95"
assert_matches = "1.5.0"
async-trait = "0.1.85"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "0.10.4"
bs58 = "0.5.1"
chrono-humanize = "0.2.3"
crossbeam-channel = "0.5.14"
ellipsis-transaction-utils = { path = "transaction-utils", version = "1.2.0" }
ellipsis-client = { path = "ellipsis-client" }
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
log = "0.4.22"
serde = "1.0.217"
tarpc = { version = "0.35.0", features = ["full"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros"] }
tokio-serde = { version = "0.9.0", features = ["bincode"] }
tracing = { version = "0.1.41", features = ["log"] }
