[package]
name = "ellipsis-client"
description = "Lightweight interface for interacting with the Solana blockchain"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
async-trait = { workspace = true }
backoff = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
bs58 = { workspace = true }
chrono-humanize = { workspace = true }
crossbeam-channel = { workspace = true }
ellipsis-transaction-utils = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
solana-banks-client = "~2.2.1"
solana-bpf-loader-program = "~2.2.1"
solana-client = "~2.2.1"
solana-logger = "~2.2.1"
solana-program = "~2.2.1"
solana-program-runtime = "~2.2.1"
solana-runtime = "~2.2.1"
solana-sdk = "~2.2.1"
solana-send-transaction-service = "~2.2.1"
solana-transaction-status = "~2.2.1"
solana-vote-program = "~2.2.1"
tarpc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tracing = { workspace = true }
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
