[package]
name = "ellipsis-transaction-utils"
version = "1.0.0"
edition = "2021"
description = "A library for sanely parsing Solana transactions."
license = "MIT OR Apache-2.0"

[dependencies]
itertools = { workspace = true } 
solana-transaction-status = { workspace = true } 
bs58 = { workspace = true } 
solana-sdk = { workspace = true } 
serde = { workspace = true } 
