[package]
name = "ellipsis-transaction-utils"
description = "A library for sanely parsing Solana transactions."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bs58 = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
solana-sdk = ">=1.16, <=2.1"
solana-transaction-status = ">=1.16, <=2.1"
