[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ellipsis-client = { path = "../../ellipsis-client" }
clap = { version = "3.2.22", features = ["cargo", "derive"] }
anyhow = "1.0.52"
tokio = { version = "1.6", features = ["full"] }
solana-sdk = "1.14.9"
phoenix-sdk = { path = "../../../phoenix-sdk/rust/phoenix-sdk" }
