[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ellipsis-client = { version = "0.3.0", path = "../../crates/ellipsis-client" }
ellipsis-transaction-utils = { version = "0.1.1", path = "../../crates/transaction-utils" }
clap = { version = "3.2.22", features = ["cargo", "derive"] }
anyhow = "1.0.52"
tokio = { version = "1.6", features = ["full"] }
solana-sdk = "1.16.2"
phoenix-sdk = { path = "../../../phoenix-sdk/rust/phoenix-sdk" }
